package com.birdcomics.GestioneProfili.Gestore.Assistenza;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class Assistenza extends Gestore{
	
}
