package com.birdcomics.GestioneProfili.Gestore.Finanza;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class Finanza extends Gestore{

}
