package com.birdcomics.GestioneProfili.Gestore;

import com.birdcomics.GestioneProfili.Utente;

public class Gestore extends Utente{
	
}
