package com.birdcomics.GestioneProfili.Gestore.GestoreCatalogo;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class GestoreCatalogo extends Gestore{

}
