package com.birdcomics.GestioneProfili.Gestore.Magazziniere;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class Magazziniere extends Gestore{

}
