package com.birdcomics.GestioneProfili.Gestore.OperatoreLogistico;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class OperatoreLogistico extends Gestore{

}
