package com.birdcomics.GestioneProfili.Gestore.RisorseUmane;

import com.birdcomics.GestioneProfili.Gestore.Gestore;

public class RisorseUmane extends Gestore{

}
